Use ProcessBuilder instead of Runtime.getRuntime() also refactor and rename getBase64ScreenshotAndDeleteFile